# pymycobot

./: pyproject.toml
demo/: Server.py  Server_260.py  Server_270.py  Server_280.py  Server_280_RDKX5.py  Server_280_RISCV.py  Server_320.py  Server_A1.py  Server_A1_2.py  Server_Pro630.py  Server_X1_close_loop.py  basic.py  change_pid.py  drag_trial_teaching.py  drag_trial_teaching_cobotx.py  drag_trial_teaching_myArm.py  get_port.py  gripper.py  gripper_set.py  myBuddy_set_PID_CN.py  myBuddy_set_PID_EN.py  mybuddy_emo.py  pid_read_write.py  port_setup.py  send_angle.py  server_400.py  server_A1_close_loop.py  sync.py
demo/handle_control/: handle_test.py  joy_control.py  myCobot280_handle_control.py  myCobot280_handle_control_old.py
demo/myAGVPro_Composite_Kit/: composite_kit.py  main.py
demo/myArm_M&C_demo/: get_date.py  main.py  myarm_c.py  myarm_m.py  utils.py
pymycobot/: Interface.py  bluet.py  close_loop.py  common.py  conveyor_api.py  dualcobotx.py  elephantrobot.py  end_control.py  error.py  exoskeleton.py  exoskeletonsocket.py  generate.py  genre.py  log.py  mecharm.py  mecharm270.py  mecharmsocket.py  mercury.py  mercury_api.py  mercury_arms_socket.py  mercury_ros_api.py  mercurychassis.py  mercurychassis_api.py  mercurysocket.py  myagv.py  myagvapi.py  myagvpro.py  myagvpro_bluetooth.py  myagvpro_socket.py  myarm.py  myarm_api.py  myarmc.py  myarmm.py  myarmm_control.py  myarmsocket.py  mybuddy.py  mybuddybluetooth.py  mybuddyemoticon.py  mybuddysocket.py  mycobot.py  (+23 more)
tests/: rasp_myArm_test_gui.py  rasp_mycobot_test_gui.py  rasp_mypall_test_gui.py
(+71 files in other folders)
